--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cookie",
-  "version": "1.0.1",
-  "description": "Cookie component.",
+  "version": "1.0.2",
+  "description": "Cookie component",
   "main": "index.js",
   "directories": {
     "test": "test"
